# lib_mangacollec

./: .gitignore  Makefile  README.md  README1.md  main.py  pyproject.toml
data/: v2_authors_edad2d63-cc34-42b8-9bc2-ca9e210b670d.json
src/mangacollec_api/: auth.py  client.py  exceptions.py
src/mangacollec_api/auth/: auth.py  auth_interface.py
src/mangacollec_api/author/converter/: author_converter.py
src/mangacollec_api/author/endpoint/: author_endpoint.py  author_endpoint_interface.py
src/mangacollec_api/author/entity/: author.py  author_endpoint_entity.py
src/mangacollec_api/author/exception/: author_exceptions.py
src/mangacollec_api/box/entity/: box.py
src/mangacollec_api/client/: client.py  client_interface.py
src/mangacollec_api/converters/: author_converter.py  converter_interface.py
src/mangacollec_api/core/interfaces/: endpoint_interface.py  entity.py
src/mangacollec_api/edition/converter/: edition_converter.py
src/mangacollec_api/edition/endpoint/: edition_endpoint.py  edition_endpoint_interface.py
src/mangacollec_api/edition/entity/: edition.py
src/mangacollec_api/endpoints/: author_endpoint.py  edition_endpoint.py  genre_endpoint.py  job_endpoint.py  kind_endpoint.py  publisher_endpoint.py  serie_endpoint.py  user_endpoint.py  volume_endpoint.py
src/mangacollec_api/entity/: author.py  box_edition.py  box_volume.py  edition.py  genre.py  job.py  kind.py  offer_abstract.py  offer_asin.py  offer_bd_fugue.py  publisher.py  serie.py  serie_end.py  task.py  volume.py
tests/endpoints/: test_series.py  test_volumes.py
(+62 files in other folders)
