[tool.poetry]
name = "mangacollec_api"
version = "0.1.78"
description = ""
authors = ["shooter-dev <vincentbleach@gmail.com>"]
readme = "README.md"
packages = [
  { include = "mangacollec_api", from = "src" }
]

[tool.poetry.urls]
repository = "https://github.com/shooter-dev/mangacollec_api"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
flake8 = "^1.7.0"
black = "^25.1.0"
mypy = "^1.17.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
